--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
   "description": "An Ionic project",
   "devDependencies": {
     "react-scripts": "3.2.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
